# cmd/main/main.go
@@ -33,44 +33,7 @@ func main() {
 
 	swagger.Setup(myRouter)
 
-	setupHandlers(myRouter)
+	handlers.SetupHandlers(myRouter)
 
 	log.Fatal(myRouter.Run(":8080"))
-}
-
-func setupHandlers(myRouter *gin.Engine) {
-
-	myRouter.Static("/static", "./front-end/static")
-
-	// === panedrone: "http://localhost:8080" to render index.html
-
-	myRouter.StaticFile("/", "./front-end/index.html")
-
-	/////////////////////////////////////////
-
-	groupApi := myRouter.Group("/api")
-
-	/////////////////////////////////////////
-
-	{
-		handleBurgers := handlers.NewBurgers()
-		groupBurgers := groupApi.Group("/burgers")
-		groupBurgers.POST("/", handleBurgers.BurgerCreate)
-		groupBurgers.GET("/:burger_id", handleBurgers.BurgerLookupByID)
-		groupBurgers.GET("/search", handleBurgers.BurgersSearchByName)
-		groupBurgers.GET("/search/ingredient", handleBurgers.BurgersSearchByIngredient)
-		groupBurgers.GET("/search/first-letters", handleBurgers.BurgersListAllStartingLetters)
-		groupBurgers.GET("/search/first-letter", handleBurgers.BurgersListAllByFirstLetter)
-		groupBurgers.GET("/random", handleBurgers.BurgerFindRandom)
-	}
-	{
-		handleIngredients := handlers.NewIngredients()
-		groupIngredients := groupApi.Group("/ingredients")
-		groupIngredients.GET("/search", handleIngredients.IngredientSearchByName)
-		groupIngredients.GET("/:ingredient_id", handleIngredients.IngredientLookupByID)
-	}
-	{
-		groupFiles := groupApi.Group("/files")
-		groupFiles.POST("/", handlers.PostFile)
-	}
 }
