# docs/swagger.yaml
@@ -80,33 +80,6 @@ paths:
       summary: Lookup full Burger details by id
       tags:
       - Burgers
-  /burgers/{ingredient_Id}:
-    get:
-      operationId: IngredientLookupByID
-      parameters:
-      - description: Ingredient ID
-        in: path
-        name: ingredient_Id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Ingredient data
-          schema:
-            $ref: '#/definitions/app_internal_model.Ingredient'
-        "400":
-          description: Bad Request
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      security:
-      - none: []
-      summary: Lookup full Ingredient details by id
-      tags:
-      - Ingredients
   /burgers/random:
     get:
       operationId: BurgerFindRandom
@@ -218,6 +191,56 @@ paths:
       summary: Search Burgers by FindByIngredient Name
       tags:
       - Burgers
+  /ingredients:
+    get:
+      operationId: IngredientsReadAll
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ingredient List
+          schema:
+            items:
+              $ref: '#/definitions/app_internal_model.Ingredient'
+            type: array
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - none: []
+      summary: Lookup all Ingredients
+      tags:
+      - Ingredients
+  /ingredients/{ingredient_Id}:
+    get:
+      operationId: IngredientLookupByID
+      parameters:
+      - description: Ingredient ID
+        in: path
+        name: ingredient_Id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ingredient data
+          schema:
+            $ref: '#/definitions/app_internal_model.Ingredient'
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - none: []
+      summary: Lookup full Ingredient details by id
+      tags:
+      - Ingredients
   /ingredients/search:
     get:
       operationId: IngredientSearchByName
